# DiningPhilosophers_v2

./: CMakeLists.txt  EatingTable.cpp  EatingTable.h  PhilosopherState.h  Readme  main  main.cpp
view/: ConsoleView.cpp  ConsoleView.h  IView.cpp  IView.h  TerminalView.cpp  TerminalView.h
